[package]
edition = "2024"
name = "atcoder-upcoming-contests"
version = "0.1.0"

[dependencies]
axum = "0.8.4"
chrono = {version = "0.4.41", features = ["serde"]}
dotenvy = "0.15.7"
reqwest = "0.12.22"
scraper = "0.23.1"
serde = {version = "1.0.219", features = ["derive"]}
tokio = {version = "1.47.1", features = ["rt-multi-thread"]}
